@@ -1,0 +1,16 @@
+<?php
+/**
+ * Internationalisation file for AutoRedirect extension.
+ *
+ * $Id$
+ * 
+*/
+
+AutoRedirect::$msg['en'] = array(
+'AutoRedirect-invalid-namespace'	=> 'AutoRedirect: invalid namespace',
+'AutoRedirect-page-text' 			=> '#REDIRECT [[$1:$2]]',
+'AutoRedirect-link-text'			=> '[[$1:$2|$3]]',
+'AutoRedirect-summary-text'			=> 'AutoRedirect page created to [[$1:$2]]',
+#'' => '',
+);
+?>
