@@ -240,3 +240,5 @@ REL1_10_11: (released ...)
 - Added 'VirtualPage' extension
 - FileManager: added 'Proprietary Words' functionality
 - FileManager: added 'parser phase 2' magic words functionality
+- FileSystemSyntaxColoring: added '<!--@@ wikitext @@-->' pattern to hide wikitext
+- 
